# etensor

./: .gitignore  CMakeLists.txt  Claude.md  README.md  ha_config_snippet.yaml  ha_dashboard_cards.yaml  partitions.csv  sdkconfig  sdkconfig.defaults  tasks.json
.claude/: settings.local.json
main/: CMakeLists.txt  etensor.c  etensor.h  etensor_test.html  ha_push.c  ha_push.h  httpkram.c  idf_component.yml  sensor.c
main/mnt/user-data/outputs/etensor/: CMakeLists.txt
